[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Big_slime.png" type="Texture" id=2]
[ext_resource path="res://Enemies/BigSlime.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 9 )

[sub_resource type="Animation" id=2]
resource_name = "Walking"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0
height = 10.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41, 9 )

[node name="BigSlime" instance=ExtResource( 1 )]
script = ExtResource( 3 )
WALKING_DIRECTION = 1

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
hframes = 3

[node name="Collider" parent="." index="1"]
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Walking"
playback_speed = 3.33
anims/Walking = SubResource( 2 )

[node name="FloorLeft" type="RayCast2D" parent="." index="3"]
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="4"]
position = Vector2( 0, -9 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -9 )
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 2

[node name="FloorRight" type="RayCast2D" parent="." index="6"]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -8 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="EnemyStats" parent="." index="8"]
max_health = 3

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2( 0, -8 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="BulletSpawnPoint" type="Position2D" parent="." index="10"]
position = Vector2( 3, -9 )

[node name="FireBulletTimer" type="Timer" parent="." index="11"]
wait_time = 4.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="12"]
position = Vector2( 0, -8.5 )
scale = Vector2( 1.5, 0.85 )

[node name="PlayerChecker" type="Area2D" parent="." index="13"]
collision_layer = 0
collision_mask = 5

[node name="Collider" type="CollisionShape2D" parent="PlayerChecker" index="0"]
position = Vector2( 0, -9 )
shape = SubResource( 4 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="PlayerChecker" to="." method="_on_PlayerChecker_area_entered"]
[connection signal="area_exited" from="PlayerChecker" to="." method="_on_PlayerChecker_area_exited"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
